--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,25 @@ languageName = "English"
   email = ""
   link = ""
 
+[params]
+  # site default theme ["auto", "light", "dark"]
+  # 网站默认主题 ["auto", "light", "dark"]
+  defaultTheme = "auto"
+  # public git repo url only then enableGitInfo is true
+  # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
+  gitRepo = ""
+  # which hash function used for SRI, when empty, no SRI is used
+  # ["sha256", "sha384", "sha512", "md5"]
+  # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
+  # ["sha256", "sha384", "sha512", "md5"]
+  fingerprint = ""
+  # date format
+  # 日期格式
+  dateFormat = "2006-01-02"
+  # website title for Open Graph and Twitter Cards
+  # 网站标题, 用于 Open Graph 和 Twitter Cards
+  title = "anamey's blog"
+
 # Menu config
 [menu]
   [[menu.main]]
