--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          submodules: true
+          submodules: false
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
