--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "LoveIt"]
-	path = LoveIt
+[submodule "themes/LoveIt"]
+	path = themes/LoveIt
 	url = https://github.com/anamey/LoveIt.git
