--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ theme = "LoveIt"
 title = "anamey's Personal Blog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
+defaultContentLanguage = "en"
 languageCode = "en"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 languageName = "English"
