--- a/config.toml
+++ b/config.toml
@@ -7,10 +7,10 @@ theme = "LoveIt"
 title = "anamey's Personal Blog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
-defaultContentLanguage = "en"
+# defaultContentLanguage = "en"
 languageCode = "en"
 # language name ["English", "简体中文", "Français", "Polski", ...]
-languageName = "English"
+# languageName = "English"
 
 # Author config
 [author]
