--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ title = "anamey's Personal Blog"
 
 # language code ["en", "zh-CN", "fr", "pl", ...]
 # defaultContentLanguage = "en"
-languageCode = "en"
+# languageCode = "en"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 # languageName = "English"
 
