--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,14 @@ title = "anamey's Personal Blog"
 # languageCode = "en"
 # language name ["English", "简体中文", "Français", "Polski", ...]
 # languageName = "English"
+defaultContentLanguage = "en"
+# language code ["en", "zh-CN", "fr", "pl", ...]
+# 网站语言, 仅在这里 CN 大写 ["en", "zh-CN", "fr", "pl", ...]
+languageCode = "en"
+# language name ["English", "简体中文", "Français", "Polski", ...]
+# 语言名称 ["English", "简体中文", "Français", "Polski", ...]
+languageName = "English"
+hasCJKLanguage = false
 
 # Author config
 [author]
