--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://anamey.github.io/"
-
+languageCode = "en-us"
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
 
