--- a/config.toml
+++ b/config.toml
@@ -467,7 +467,7 @@ hasCJKLanguage = false
       keepStatic = false
       # whether to make the table of the contents in the sidebar automatically collapsed
       # 是否使侧边目录自动折叠展开
-      auto = true
+      auto = false
     # Code config
     # 代码配置
     [params.page.code]
