--- a/config.toml
+++ b/config.toml
@@ -560,7 +560,7 @@ hasCJKLanguage = false
       # Gitalk comment config (https://github.com/gitalk/gitalk)
       # Gitalk 评论系统设置 (https://github.com/gitalk/gitalk)
       [params.page.comment.gitalk]
-        enable = true
+        enable = false
         owner = "anamey"
         repo = "myblog-comment-storage"
         clientId = "bf42b629395e2156b3c8"
@@ -622,9 +622,9 @@ hasCJKLanguage = false
       # utterances comment config (https://utteranc.es/)
       # utterances comment 评论系统设置 (https://utteranc.es/)
       [params.page.comment.utterances]
-        enable = false
+        enable = true
         # owner/repo
-        repo = ""
+        repo = "anamey/myblog-comment-storage"
         issueTerm = "pathname"
         label = ""
         lightTheme = "github-light"
